fixing missing cameras and alignment

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -149,6 +149,7 @@ body
                 display block
                 pointer-events auto
                 object-fit cover
+                align-self center
                 // filter saturate(0.25)
                 // transition filter, transform 300ms ease-in-out
                 cursor pointer
